# trading-bot-binance-futures-

./: .gitignore  README.md
bot/: logging_config.py  validators.py
tests/: conftest.py  test_orders.py
trading_bot/: .env.example  cli.py  pyproject.toml  requirements.txt
trading_bot/.github/workflows/: tests.yml
trading_bot/bot/: client.py  orders.py
trading_bot/tests/: test_client.py  test_validators.py
