[project]
name = "trading-bot"
version = "1.0.0"
description = "Simplified CLI trading bot for Binance Futures Testnet (USDT-M)"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
